--- a/Sridevi-Chapter1/Concepts/C_Server.dita
+++ b/Sridevi-Chapter1/Concepts/C_Server.dita
@@ -3,15 +3,18 @@
 <concept id="C_Server">
     <title>Server</title>
     <shortdesc></shortdesc>
+    <prolog>
+        <author>Sridevi</author>
+    </prolog>
     <conbody>
         <p>The Marvel Enterprise Portal client connects to its application server, the Marvel
             Enterprise Portal Server. The Marvel Enterprise Portal Server is a collection of
             software services for the client that enables retrieval, manipulation and analysis of
             data from the monitoring agents on your enterprise. This server connects to the Marvel
-            Enterprise Monitoring Server, which acts as a collection and control point for alerts
-            received from the monitoring agents, and collects performance and availability data. The
-            main, or hub, Marvel Enterprise Monitoring Server correlates the monitoring data
-            collected by agents and remote servers and passes it to the Marvel Enterprise Portal
-            Server for presentation and your evaluation.</p>
+            Enterprise <keyword>Monitoring Server</keyword>, which acts as a collection and control
+            point for alerts received from the monitoring agents, and collects performance and
+            availability data. The main, or hub, Marvel Enterprise Monitoring Server correlates the
+            monitoring data collected by agents and remote servers and passes it to the Marvel
+            Enterprise Portal Server for presentation and your evaluation.</p>
     </conbody>
 </concept>
