--- a/Sridevi-Chapter1/Concepts/C_Features.dita
+++ b/Sridevi-Chapter1/Concepts/C_Features.dita
@@ -12,6 +12,18 @@
         features, and you can find demos for many of them on developer works in the <xref
             href="http://www.ibm.com/tivoli/media" format="html" scope="external">IBM Marvel Media
             Gallery</xref>.</shortdesc>
+    <prolog>
+        <author>Sridevi</author>
+        <metadata>
+            <keywords>
+                <indexterm>UNIX</indexterm>
+            </keywords>
+            <keywords>
+                <keyword>Customizing workspaces</keyword>
+                <keyword>Customizing workspace views</keyword>
+            </keywords>
+        </metadata>
+    </prolog>
     <conbody>
         <p>
             <simpletable frame="all" relcolwidth="1.0* 3.08*" id="simpletable_kqd_r52_vxb">
@@ -28,34 +40,27 @@
                         status immediately with the predefined workspaces. With just a few clicks of
                         the mouse, you can tailor your own workspaces to look at specific
                         conditions, display critical threshold values in red, and filter incoming
-                        data so you see only what matters. See “<i>Custom workspace options and
-                            guidelines</i>” on page 63.</stentry>
+                        data so you see only what matters.</stentry>
                 </strow>
                 <strow>
                     <stentry>Customizing workspace views</stentry>
                     <stentry><image href="../Images/Chart%20Display.png" width="5cm" height="1cm"
                             id="image_btl_3v2_vxb"/>The charts display data that the monitoring
                         agents have gathered from the systems where they are running. They can also
-                        show data from any ODBC-compliant database you write a custom query for. See
-                            “<i>Creating a new chart</i>” on page 102.<p><image
-                                href="../Images/Notepad.png" width="1cm" height="1cm"
+                        show data from any ODBC-compliant database you write a custom query for.
+                                <p><image href="../Images/Notepad.png" width="1cm" height="1cm"
                                 id="image_mpq_4v2_vxb"/>The notepad view opens a simple text editor
-                            for writing text that can be saved with the workspace. See “<i>Adding a
-                                notepad view</i>” on page 166.</p><p><image
+                            for writing text that can be saved with the workspace.</p><p><image
                                 href="../Images/Table.png" width=".7cm" height=".7cm"
                                 id="image_qgh_rv2_vxb"/>The table view displays data that the
-                            monitoring agents have gathered from the systems where they are running.
-                            See “<i>Adding a table view</i>” on page 97. </p><p><image
-                                href="../Images/log.png" width=".7cm" height=".7cm"
-                                id="image_qgq_tv2_vxb"/>The message log shows the status of all
-                            situations distributed to the managed systems in your enterprise. (Your
-                            user ID requires View permission for the Event feature.) See “<i>Adding
-                                a message log view</i>” on page 140.</p><p><image
-                                href="../Images/Universal%20message.png" width="1cm" height=".7cm"
-                                id="image_zgr_vv2_vxb"/>The universal message console view shows
-                            situation and policy activity, and messages received as the result of
-                            universal message generation. See “<i>Adding a Universal Message Console
-                                view</i>” on page 143.</p></stentry>
+                            monitoring agents have gathered from the systems where they are
+                            running.</p><p><image href="../Images/log.png" width=".7cm"
+                                height=".7cm" id="image_qgq_tv2_vxb"/>The message log shows the
+                            status of all situations distributed to the managed systems in your
+                            enterprise.</p><p><image href="../Images/Universal%20message.png"
+                                width="1cm" height=".7cm" id="image_zgr_vv2_vxb"/>The universal
+                            message console view shows situation and policy activity, and messages
+                            received as the result of universal message generation.</p></stentry>
                 </strow>
             </simpletable>
         </p>
