--- a/Sridevi-Chapter1/Concepts/C_Monitoring_Agents.dita
+++ b/Sridevi-Chapter1/Concepts/C_Monitoring_Agents.dita
@@ -3,6 +3,16 @@
 <concept id="C_Monitoring_Agents">
     <title>Monitoring Agents</title>
     <shortdesc></shortdesc>
+    <prolog>
+        <author>Sridevi</author>
+        <metadata>
+            <audience/>
+            <keywords>
+                <indexterm>MQSI Broker<keyword>Monitoring
+                        Agents</keyword><keyword>Threshold</keyword></indexterm>
+            </keywords>
+        </metadata>
+    </prolog>
     <conbody>
         <p>Marvel Enterprise Monitoring Agents are installed where you have resources you want to
             monitor. The agents and the operating system, subsystem or computer that they are
@@ -11,44 +21,23 @@
         <p>Some agents also have subagents. In such instances the agent is the managing agent. For
             example, the WebSphere® MQ Integrator Series agent has MQSI Broker subagents. Subagents
             are displayed in the Navigator below the managing agent and its attribute groups.</p>
-        <p><b>MQSI Agent - ::KQIA</b></p>
-        <ol id="ol_jkg_132_vxb">
-            <li>
-                <p>MQSI Components</p>
-            </li>
-            <li>
-                <p>Product Events</p>
-            </li>
-            <li>
-                <p>MQSI Broker MQSIBroker1::KQIB</p>
-                <ol id="ol_rt2_c32_vxb">
-                    <li>
-                        <p>Broker Events</p>
-                    </li>
-                    <li>
-                        <p>Flow Events</p>
-                    </li>
-                    <li>
-                        <p>Broker Information</p>
-                    </li>
-                    <li>
-                        <p>Broker Statistics</p>
-                    </li>
-                    <li>
-                        <p>Execution Group Statistics</p>
-                    </li>
-                    <li>
-                        <p>Message Flow Statistics</p>
-                    </li>
-                    <li>
-                        <p>Neighbors</p>
-                    </li>
-                    <li>
-                        <p>Topics</p>
-                    </li>
-                </ol>
-            </li>
-        </ol>
+        <p><b>MQSI Agent- KQIA</b></p>
+        <p>
+            <ol id="ol_jkg_132_vxb">
+                <li>MQSI Components</li>
+                <li>Product Events</li>
+                <li>MQSI Broker MQSIBroker1::KQIB<ol id="ol_rt2_c32_vxb">
+                        <li>Broker Events</li>
+                        <li>Flow Events</li>
+                        <li>Broker Information</li>
+                        <li>Broker Statistics</li>
+                        <li>Execution Group Statistics</li>
+                        <li>Message Flow Statistics</li>
+                        <li>Neighbors</li>
+                        <li>Topics</li>
+                    </ol></li>
+            </ol>
+        </p>
         <p>The agent gathers the current values of the attributes (elements) specified in a view.
             Gathered attribute values can also be tested against a threshold and display an event
             indicator when conditions exceed the threshold. Some agents have fewer than 100
@@ -58,19 +47,15 @@
             in a situation, as a table threshold, or as a chart or table view filter, Marvel
             Enterprise Portal compares the current value with the value specified and does the
             following:</p>
-        <ol id="ol_bvy_h32_vxb">
-            <li>
-                <p>If the comparison in the situation is met, then the situation is true and event
-                    indicators are displayed in the Navigator.</p>
-            </li>
-            <li>
-                <p>If the compared value exceeds the threshold specified for the table, the cell is
-                    highlighted in red, yellow, or blue.</p>
-            </li>
-            <li>
-                <p>If the compared value meets the filter condition, it is included in the chart or
-                    table display. </p>
-            </li>
-        </ol>
+        <p>
+            <ol id="ol_w2x_3h1_wxb">
+                <li>If the comparison in the situation is met, then the situation is true and event
+                    indicators are displayed in the Navigator.</li>
+                <li>If the compared value exceeds the threshold specified for the table, the cell is
+                    highlighted in red, yellow, or blue.</li>
+                <li>If the compared value meets the filter condition, it is included in the chart or
+                    table display. </li>
+            </ol>
+        </p>
     </conbody>
 </concept>
