--- a/Sridevi-Chapter1/Tasks/T_Situations.dita
+++ b/Sridevi-Chapter1/Tasks/T_Situations.dita
@@ -7,9 +7,12 @@
         occurs, and an event indicator is displayed over the applicable items in the
             <b>Navigator</b>. The Navigator alerts you of changing conditions in the systems you are
         monitoring.</shortdesc>
+    <prolog>
+        <author>Sridevi</author>
+    </prolog>
     <taskbody>
-        <prereq id="prereq_mqy_vl2_vxb">To view the Situation editor, your user ID must have
-            necessary permissions.<note id="note_drb_dm2_vxb"> If you see any of these icons in the
+        <prereq id="prereq_mqy_vl2_vxb">Your user account must have necessary permissions to view
+            the Situation editor.<note id="note_drb_dm2_vxb"> If you see any of these icons in the
                 Navigator now, move the mouse pointer over an event indicator to open a flyover
                 listing of the situations that caused the events at that level of the Navigator and
                 below.</note><p>When a condition changes, the associated item is marked with an icon
@@ -50,43 +53,44 @@
                         <stentry>Informational or Unknown</stentry>
                     </strow>
                 </simpletable></p></prereq>
-        <context>To open a situation, do the following steps:</context>
+        <context>To open a Situation, do the following steps:</context>
         <steps>
             <step>
-                <cmd>Right click the system in the <b>Navigator</b> and click
-                    <b>Situations</b>.</cmd>
+                <cmd>Right click the system in the <uicontrol>Navigator</uicontrol> and click
+                        <uicontrol>Situations</uicontrol>.</cmd>
             </step>
             <step>
-                <cmd>The <b>Situation</b> editor opens with a list of situations on the left. This
-                    is where you can view and edit situations or create new ones.</cmd>
+                <cmd>The <uicontrol>Situations</uicontrol> editor opens with a list of situations on
+                    the left. This is where you can view and edit situations or create new
+                    ones.</cmd>
             </step>
             <step>
-                <cmd>Click anyone of the situation name in the tree to see the <b>Situation</b>
-                    editor tabs. </cmd>
+                <cmd>Click anyone of the situation name in the tree to see the
+                        <uicontrol>Situations</uicontrol> editor tabs. </cmd>
             </step>
             <step>
                 <cmd>To view, add, and change the conditions being tested, click
-                    <b>Formula</b>.</cmd>
+                        <uicontrol>Formula</uicontrol>.</cmd>
             </step>
             <step>
                 <cmd>To view and specify the systems on which to run the situation click
-                        <b>Distribution</b>.</cmd>
+                        <uicontrol>Distribution</uicontrol>.</cmd>
             </step>
             <step>
                 <cmd>To write comments or instructions to be read in the event results workspace,
-                    click <b>Expert</b>
-                    <b>Advice</b>.</cmd>
+                    click <uicontrol>Expert Advice</uicontrol>. </cmd>
             </step>
             <step>
-                <cmd>To send a command to the managed system, click <b>Action</b>. </cmd>
+                <cmd>To send a command to the managed system, click <uicontrol>Action</uicontrol>.
+                </cmd>
             </step>
             <step>
                 <cmd>Click <b>Until</b> to close the event after a period of time or when another
                     situation is true.</cmd>
             </step>
             <step>
-                <cmd>When you are done, you can close the <b>Situation</b> editor by clicking on the
-                        <b>Cancel</b> button. </cmd>
+                <cmd>When you are done, you can close the <uicontrol>Situations</uicontrol> editor
+                    by clicking on the <uicontrol>Cancel</uicontrol> button. </cmd>
             </step>
         </steps>
     </taskbody>
